--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.3
 asttokens==2.0.5
 backcall==0.2.0
+beautifulsoup4==4.11.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 cycler==0.11.0
@@ -42,6 +43,7 @@ scipy==1.8.0
 seaborn==0.11.2
 six==1.16.0
 sklearn==0.0
+soupsieve==2.3.2
 spotipy==2.19.0
 stack-data==0.2.0
 threadpoolctl==3.1.0
