--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 appnope==0.1.3
 asttokens==2.0.5
+async-generator==1.10
+attrs==21.4.0
 backcall==0.2.0
 beautifulsoup4==4.11.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
+cryptography==36.0.2
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
 entrypoints==0.4
 executing==0.8.3
 fonttools==4.31.2
+h11==0.13.0
 idna==3.3
 ipykernel==6.12.1
 ipython==8.2.0
@@ -18,10 +23,12 @@ joblib==1.1.0
 jupyter-client==7.2.1
 jupyter-core==4.9.2
 kiwisolver==1.4.2
+lxml==4.8.0
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 nest-asyncio==1.5.5
 numpy==1.22.3
+outcome==1.1.0
 packaging==21.3
 pandas==1.4.2
 parso==0.8.3
@@ -32,8 +39,11 @@ prompt-toolkit==3.0.29
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.11.2
+pyOpenSSL==22.0.0
 pyparsing==3.0.7
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.1
 pyzmq==22.3.0
@@ -41,13 +51,20 @@ requests==2.27.1
 scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
+selenium==4.1.3
 six==1.16.0
 sklearn==0.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2
 spotipy==2.19.0
 stack-data==0.2.0
 threadpoolctl==3.1.0
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.1.1
+trio==0.20.0
+trio-websocket==0.9.2
 urllib3==1.26.9
 wcwidth==0.2.5
+wsproto==1.1.0
